Use correct timestamp for generated mouse events on Mac.

BUG=642737

Review-Url: https://codereview.chromium.org/2686723003
Cr-Commit-Position: refs/heads/master@{#450005}

Former-commit-id: f212cc56820dda5e8b5d902a15e39bcb09c37df5